Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93396

Android A11Y TalkBack: Slider does not announce value on change

XMLWordPrintable

    • Android
    • 21
    • Team One Foundation Sprint 51

      Context

      QtQuick Controls 2 Slider on Android Phone with TalkBack activated to fulfill requirements of WCAG 2.0 / WCAG2ICT

      Expectations

      • Value should be announced by TalkBack on value change by gesture

      Observation

      • Changing the value does not announce the value.
      • Sometimes the value is announced with wrong/no rounding of the value.

      See attached videos

      Code

      import QtQuick 2.15
      import QtQuick.Window 2.15
      import QtQuick.Controls 2.15
      import QtQuick.Layouts 1.15
      
      Window {
          visible: true
      
          Column {
      
              Slider {
                  value: 5
                  from: 0
                  to: 20
                  stepSize: 1
              }
      
              Button {
                  text: "Foo"
              }
      
          }
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            michl86 Michael Piendl
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: