src/plugins/platforms/android/qandroidplatformaccessibility.cpp
@@ -66,6 +66,8 @@ void QAndroidPlatformAccessibility::notifyAccessibilityUpdate(QAccessibleEvent *
         QtAndroidAccessibility::notifyObjectHide(event->uniqueId());
     } else if (event->type() == QAccessible::Focus) {
         QtAndroidAccessibility::notifyObjectFocus(event->uniqueId());
+    } else if (event->type() == QAccessible::ValueChanged) {
+        QtAndroidAccessibility::notifyValueChanged(event->uniqueId());
     }
 }
 
