src/android/jar/src/org/qtproject/qt5/android/accessibility/QtNativeAccessibility.java
@@ -55,4 +55,5 @@ class QtNativeAccessibility
     static native boolean scrollBackward(int objectId);
 
     static native boolean populateNode(int objectId, AccessibilityNodeInfo node);
+    static native String valueForAccessibleObject(int objectId);
 }
